[metadata]
name = hyper
version = attr: setup.__version__
author = Cory Benfield
author_email = cory@lukasa.co.uk
license = MIT License
description = HTTP/2 Client for Python
long_description = file: README.rst, HISTORY.rst
url = http://hyper.rtfd.org
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: Implementation :: CPython

[options]
packages =
    hyper
    hyper.http20
    hyper.common
    hyper.http11
install_requires =
    h2>=2.4,<3.0,!=2.5.0
    hyperframe>=3.2,<4.0
    rfc3986>=1.1.0,<2.0
    brotlipy>=0.7.0
    pyOpenSSL>=0.15; python_full_version < "2.7.9" # Fallback to good SSL on bad Python versions.
    service_identity>=14.0.0; python_full_version < "2.7.9"
    cryptography<1.0; platform_python_implementation == "pypy" and python_full_version < "2.7.9" # PyPy with bad SSL modules will likely also need the cryptography module at lower than 1.0, because it doesn't support CFFI v1.0 yet.
    enum34>=1.0.4, <2; python_version == "2.7" or python_version == "3.3"

include_package_data = True
tests_require = pytest; requests; mock

[options.entry_points]
console_scripts = hyper = hyper.cli:main

[options.extras_require]
fast = pycohttpparser

[options.package_data]
"" = 
    LICENSE
    README.rst
    CONTRIBUTORS.rst
    HISTORY.rst
    NOTICES

[wheel]
universal = 1

[flake8]
max-complexity = 15