[metadata]
name = hyper
version = attr: setup.__version__
author = Cory Benfield
author_email = cory@lukasa.co.uk
license = MIT License
description = HTTP/2 Client for Python
long_description = file: README.rst, HISTORY.rst
url = http://hyper.rtfd.org
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >= 3.4
packages =
    hyper
    hyper.http20
    hyper.common
    hyper.http11

install_requires =
    h2>=2.4 # git+https://github.com/python-hyper/h2.git
    hyperframe>=3.2 # git+https://github.com/python-hyper/hyperframe.git
    rfc3986>=1.1.0 # git+https://github.com/python-hyper/rfc3986.git
    brotlipy>=0.7.0 # git+https://github.com/python-hyper/brotlicffi.git

include_package_data = True
tests_require = pytest; requests; mock

[options.entry_points]
console_scripts = hyper = hyper.cli:main

[options.extras_require]
fast = pycohttpparser

[options.package_data]
"" = 
    LICENSE
    README.rst
    CONTRIBUTORS.rst
    HISTORY.rst
    NOTICES

[wheel]
universal = 1

[flake8]
max-complexity = 15
